[package]
name = "rust-tokio-understanding-asynchronous-and-green-thread"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
console-subscriber = "0.1.9"
futures = "0.3"
num_cpus = "1.15.0"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"
